# Optimo-MSIS-Demo

./: CLAUDE.md  TEST_STATUS.md  run_optimizer.py  test_backend.js  test_gurobi.py  test_milp.py  test_milp_only.py  test_optimizer.py  test_optimizer_pipeline.sh  test_with_docker.sh
Old Optimizaion files to build of of/: milp_soft.py
Test Input Files/: Sections_Information.csv  Student_Info.csv  Teacher_Info.csv
pipeline_test/output/: metrics.json
pipeline_test/output/final/: Master_Schedule.csv  Student_Assignments.csv  Teacher_Schedule.csv  Utilization_Report.csv  dashboard.html  summary.json
pipeline_test/output/iterations/iteration_1/: Master_Schedule.csv  Student_Assignments.csv  (+2 more)
scheduling-platform/: docker-compose.yml
scheduling-platform/backend/: package.json
scheduling-platform/backend/src/: index.js
scheduling-platform/backend/tests/: api.test.js
scheduling-platform/database/: init.sql
scheduling-platform/frontend/: package.json
scheduling-platform/optimizer/: Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
scheduling-platform/optimizer/src/: __init__.py  api.py  cli.py  optimizer.py  pipeline.py
scheduling-platform/optimizer/src/algorithms/: __init__.py  greedy.py  load.py  milp.py  milp_soft.py  schedule_optimizer.py
scheduling-platform/optimizer/src/data/: converter.py  loader.py
scheduling-platform/optimizer/src/models/: entities.py
scheduling-platform/optimizer/tests/: test_optimizer.py  test_with_data.py
test_results/: Student_Assignments.csv  Utilization_Report.csv
(+75 files in other folders)
